--- a/css/typical.css
+++ b/css/typical.css
@@ -58,6 +58,12 @@ body{
 img{
 	width:100%;
 }
+.menu{
+	line-height:20px;
+	padding: 170px;
+	text-align: center;
+}
+}
 .text{
 	line-height:18px;
 	padding: 170px;
