--- a/css/typical.css
+++ b/css/typical.css
@@ -17,8 +17,9 @@ body{
 	overflow-y:scroll;
 	font-family: Courier, monospace;
 	text-rendering:geometricPrecision;
+	color:#2e2e2e;
+	text-shadow:  0px 0px .4px #7b7b7b, 0px 0px .8px #bbb;
 	font-size: 10px;
-	text-shadow: 0px 0px 0.2px #737373;
 	margin-top:160px;
 	margin-bottom:160px;
 	margin-right:0px;
@@ -34,13 +35,15 @@ body{
 	left: 0;
 	margin-right: auto;
 	margin-left: auto;
-	padding-top:9px;
+	padding-top:12px;
 	height:24px;
 	text-align:center;
 	background:#FFF;
+	box-shadow: 0px 0px 1px #fff;
 }
 #top:hover{
 	background: #ffff00;
+	box-shadow: 0px 0px 1px #ffff00;
 }
 #middle{
 	width:90%;
@@ -49,6 +52,7 @@ body{
 	background:#FFF;
 	margin-right: auto;
 	margin-left: auto;
+	box-shadow: 0px 0px 1px #fff;
 }
 #bottom{
 	position:fixed;
@@ -58,13 +62,15 @@ body{
 	left: 0;
 	margin-right: auto;
 	margin-left: auto;
-	padding-top:9px;
+	padding-top:12px;
 	height:24px;
 	text-align:center;
 	background:#FFF;
+	box-shadow: 0px 0px 1px #fff;
 }
 #bottom:hover{
 	background: #ffff00;
+	box-shadow: 0px 0px 1px #ffff00;
 }
 img{
 	width:100%;
