--- a/css/typical.css
+++ b/css/typical.css
@@ -35,9 +35,7 @@ body{
 	left: 0;
 	margin-right: auto;
 	margin-left: auto;
-	padding-top:12px;
 	height:24px;
-	text-align:center;
 	background:#FFF;
 	box-shadow: 0px 0px 1px #fff;
 }
@@ -48,7 +46,6 @@ body{
 #middle{
 	width:90%;
 	max-width:800px;
-	min-height:340px;
 	background:#FFF;
 	margin-right: auto;
 	margin-left: auto;
@@ -62,9 +59,7 @@ body{
 	left: 0;
 	margin-right: auto;
 	margin-left: auto;
-	padding-top:12px;
 	height:24px;
-	text-align:center;
 	background:#FFF;
 	box-shadow: 0px 0px 1px #fff;
 }
@@ -75,17 +70,22 @@ body{
 img{
 	width:100%;
 }
+.title{
+	line-height:23px;
+	text-align:center;
+}
 .menuWrapper{
-	margin-top:auto;
-	margin-bottom:auto;
-	height:100%;
+	width:180px;
+	padding-top:50px;
+	padding-bottom:20px;
+	background:#FFF;
+	margin-right: auto;
+	margin-left: auto;
+	box-shadow: 0px 0px 1px #fff;
 }
 .menu{
 	width:180px;
-	margin-left:auto;
-	margin-right:auto;
-	line-height:18px;
-	padding: 3px;
+	line-height:23px;
 	text-align: center;
 }
 .menu:hover{
