--- a/css/typical.css
+++ b/css/typical.css
@@ -165,6 +165,23 @@ input[type="checkbox"]:checked ~ ul{
 input[type="checkbox"]:checked + label{
 	margin-bottom:20px;
 }
+blockquote{
+	font-style: italic;
+	margin: 0px;
+	padding:0px;
+	font-size: inherit;
+	font-weight:inherit;
+	text-shadow: inherit;
+}
+h6{
+	margin:0px;
+	padding:0px;
+	text-align: right;
+	font-size: inherit;
+	font-style: inherit;
+	font-weight:inherit;
+	text-shadow: inherit;
+}
 @media only screen and (max-width: 650px) {
     .text{
 			padding:10px;
