--- a/css/nouislider.css
+++ b/css/nouislider.css
@@ -67,7 +67,7 @@
 /* Styling;
  */
 .noUi-target {
-  background: #fff;
+  background:#f6f6f6;
 }
 .noUi-connect {
   background: #000;
@@ -195,7 +195,7 @@
 .noUi-tooltip {
   display: block;
   position: absolute;
-  background: #fff;
+  background: #f6f6f6;
   color: #000;
   padding: 0px;
   text-align: center;
